--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-template",
+  "name": "invoice-management-server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,10 +25,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.4",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "elastic-apm-node": "^3.37.0",
+    "mongoose": "^7.0.0",
     "oracledb": "^5.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
