--- a/server/package.json
+++ b/server/package.json
@@ -25,17 +25,22 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.4",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "elastic-apm-node": "^3.37.0",
     "mongoose": "^7.0.0",
     "oracledb": "^5.4.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "uninstall": "^0.0.0",
     "uuid": "^8.3.2",
     "winston": "^3.8.1"
   },
@@ -47,6 +52,7 @@
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/oracledb": "^5.2.3",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
