--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,11 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^8.0.0",
-    "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "elastic-apm-node": "^3.37.0",
     "mongoose": "^7.0.0",
     "oracledb": "^5.4.0",
